--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "cordova-plugin-camera": "^7.0.0",
+    "firebase": "^10.6.0",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
