--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ionic-native/camera": "^5.36.0",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "axios": "^1.6.2",
     "cordova-plugin-camera": "^7.0.0",
     "firebase": "^10.6.0",
     "ionicons": "^7.0.0",
